2 igw.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc_1.id

    tags = {
        Name = "IGW"
    }
}
